Some fixes to the z-index for the right/left columns (g612 & g306).

--- a/SI572_CardioGeni/style.css
+++ b/SI572_CardioGeni/style.css
@@ -25,18 +25,19 @@ Learn more ~ http://www.gridsystemgenerator.com/
 	display: inline;
 	float: left;
 	margin-left: 40px;
+	margin-bottom: 20px;
 }
 
 /* =Grid >> 9 Columns
 --------------------------------------------------------------------------------*/
 .g{width:62px;}
 .g204{width:164px;}
-.g306{width:266px;}
+.g306{width:266px; padding-top: 40px;}
 .g408{width:368px;}
 .g510{width:470px;}
-.g612{width:572px;}
+.g612{width:572px; z-index: 100; position: relative; padding-top: 40px;}
 .g714{width:674px;}
-.g816{width:776px;}
+.g816{width:776px; }
 .g918{width:878px;}
 
 
@@ -146,9 +147,9 @@ background-repeat: no-repeat;
 margin-top: -40px;
 left: 10px;
 top: -35px;
-height: 100px;
+height: 50px;
 position: relative;
-z-index: 100;
+z-index: 80;
 
 }
 .top {
@@ -229,7 +230,8 @@ color: #493B3B;
 }
 
 input {
-background-color: gray;
+border: 1px solid black;
+z-index: 100;
 }
 
 pre {
